SET(LIBTCOD_SAMPLE_C_SRC SamplesC.c)
SET(LIBTCOD_SAMPLE_CPP_SRC SamplesCPP.cpp)

# samples_c.c needs SDL/SDL.h, so we need the Include dir
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ADD_EXECUTABLE(SamplesC ${LIBTCOD_SAMPLE_C_SRC})
TARGET_LINK_LIBRARIES(SamplesC ${LIBTCOD_NAME})

ADD_EXECUTABLE(SamplesCPP ${LIBTCOD_SAMPLE_CPP_SRC})
TARGET_LINK_LIBRARIES(SamplesCPP ${LIBTCOD_NAME} ${LIBTCOD_CPP_NAME})  #${LIBTCOD_CPP_NAME} is empty on non-linux platforms

