ADD_EXECUTABLE(Sample.Images App.cpp)

SET_TARGET_PROPERTIES(Sample.Images PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(Sample.Images PRIVATE Doryen::Framework)

# Moving directory with resources needed
FILE(COPY ${DORYEN_ROOT_DIR}/Data/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Data)
FILE(COPY ${DORYEN_ROOT_DIR}/Terminal.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Skull.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
